--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div>
             <div class="textcent">Full width with caption</div>
-            <img src="./img/2.png" alt="Same picture with centered header">
+            <img src="./img/2.png" alt="Same picture with centered header" title="No title">
         </div>
         <div>
             <div class="textright">Centered image with caption</div>
