--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div>
             <div class="textcent">Full width with caption</div>
-            <img src="./img/2.png" alt="Same picture with centered header" title="No title">
+            <img src="./img/2.png" alt="Same picture with centered header">
         </div>
         <div>
             <div class="textright">Centered image with caption</div>
@@ -70,7 +70,7 @@
         </div>
         <div>
             <div class="textcent">Centered image with caption</div>
-            <div class="imgcent"><img src="./img/4.png" alt="No title"></div>
+            <div class="imgcent"><img src="./img/4.png" alt="No title with picture above"></div>
         </div>
         <div>
             <div>Images with horizontal scroll</div>
@@ -82,7 +82,7 @@
         </div>
         <div>
             <div class="textcent">Circular images</div>
-            <div class="imgcent"><img src="./img/7.png" alt="Round picture of man with glacces" title="Circular images"></div>
+            <div class="imgcent"><img src="./img/7.png" alt="Circular image example" title="Round picture of man with glacces"></div>
         </div>
 
         <div>            
