--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
             text-align:right;
         }
 
-        div.imgright{
-            text-align:right;
-        }
-        
         .box{
             width:1024px;
             height:auto;
@@ -58,7 +54,7 @@
     <div class="box">
         <div>
             <div>Full width with caption</div>
-            <img src="./img/1.png" alt="Evening city" title="Carrot cake chupa chups gummi bears sweet fruitcake gummi bears sweet roll marzipan." class="large">
+            <img src="./img/1.png" alt="Evening city" title="Carrot cake chupa chups gummi bears sweet fruitcake gummi bears sweet roll marzipan.">
         </div>
         <div>
             <div class="textcent">Full width with caption</div>
@@ -74,7 +70,7 @@
         </div>
         <div>
             <div>Images with horizontal scroll</div>
-            <img src="./img/5.png" alt="Example of horizontal scroll" title="An example of a wide image that may require horizontal scroll depending on device width. ">            
+            <div class="imgcent"><img src="./img/5.png" alt="Example of horizontal scroll" title="An example of a wide image that may require horizontal scroll depending on device width."></div>            
         </div>
         <div>
             <div>Screenshots</div>
