--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .page{
             background-color:#FFFFFF;
             font-family:impact; 
-            font-size:18pt; 
+            font-size:15pt; 
             font-style:bold;
             color:black;
         }
@@ -70,13 +70,15 @@
         </div>
         <div>
             <div>Images with horizontal scroll</div>
-            <div class="imgcent"><img src="./img/5.png" alt="Example of horizontal scroll" title="An example of a wide image that may require horizontal scroll depending on device width."></div>            
+            <img src="./img/5.png" alt="Example of horizontal scroll" title="An example of a wide image that may require horizontal scroll depending on device width.">            
         </div>
         <div>
             <div>Screenshots</div>
             <img src="./img/6.png" alt="List screenshot" title="Sitemap example">
         </div>
-        <div class="imgcent"><img src="./img/7.png" alt="Circular image example" title="Round picture of man with glacces"></div>        
+        <div class="imgcent">
+            <img src="./img/7.png" alt="Circular image example" title="Round picture of man with glacces">
+        </div>        
 
         <div>            
             <img src="./img/8.png" alt="Something" title="The thing" style="padding-top:84px; box-sizing:border-box;">
