--- a/Lesson 3/index.html
+++ b/Lesson 3/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=M+PLUS+1&family=Marcellus+SC&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./style/styles.css">
 </head>
-<body class="body">
+<body>
     <div class="header front">
         <span>STRONG</span> UKRAINE
     </div>
