--- a/Lesson 3/index.html
+++ b/Lesson 3/index.html
@@ -49,7 +49,7 @@
     <div class="line center"></div>
     <img src="./img/Ukraine.png" alt="Map of Ukraine" class="country">
     <div class="button">
-        <a href="#">Пiдтримка</a>
+        <a href="#">Пiдтримка</a>        
     </div>
     <div class="footer">
         <span>STRONG</span> UKRAINE        
@@ -57,26 +57,27 @@
             <a href=“ukrinfo123@gmail.com”>ukrinfo123@gmail.com</a> <a href=“tel:+380123456789”>+380* *** **14</a>
         </div>
         <div class="networks">
-            <a href="https://www.instagram.com/">
-                <img src="./img/inst.png" alt="Instagram" title="Iнстаграм">
-            </a>
-        </div>
-        <div class="networks">
-            <a href="https://twitter.com/">
-                <img src="./img/twit.png" alt="Twitter" title="Твiттер" id="1">
-            </a>
-        </div>
-        <div class="networks">
-            <a href="https://www.facebook.com/">
-                <img src="./img/face.png" alt="Facebook" title="Фейсбук" id="2">
-            </a>
-        </div>
-        <div class="networks">
-            <a href="https://telegram.org">
-                <img src="./img/tel.png" alt="Telegram" title="Телеграм">
-            </a>            
-        </div>
+            <div class="icons">
+                <a href="https://www.instagram.com/">
+                    <img src="./img/inst.png" alt="Instagram" title="Iнстаграм">
+                </a>
+            </div>
+            <div class="icons">
+                <a href="https://twitter.com/">
+                    <img src="./img/twit.png" alt="Twitter" title="Твiттер">
+                </a>
+            </div>
+            <div class="icons">
+                <a href="https://www.facebook.com/">
+                    <img src="./img/face.png" alt="Facebook" title="Фейсбук">
+                </a>
+            </div>
+            <div class="icons">
+                <a href="https://telegram.org">
+                    <img src="./img/tel.png" alt="Telegram" title="Телеграм" id="1">
+                </a>
+            </div> 
     </div>
-    
+
 </body>
 </html>
