--- a/Lesson 4 incorrect/index.html
+++ b/Lesson 4 incorrect/index.html
@@ -11,26 +11,24 @@
 
 <body>
 
-    <div class="header">
-        <div class="mount">
-            <img src="./img/MountainLogo.png" alt="Mountain Logo">
-        </div>
-        <div class="list">            
-            <div class="menu"><a href="#">ГОЛОВНА</a></div>                        
+    <div class="header" id="Up">
+        <img src="./img/MountainLogo.png" alt="Mountain Logo">
+        <div class="list">
+            <div class="menu"><a href="#">ГОЛОВНА</a></div>            
             <div class="menu"><a href="#">ПРО НАС</a></div>
             <div class="menu"><a href="#">ЗАБРОНЮВАТИ</a></div>
             <div class="menu"><a href="#">КОНТАКТИ</a></div>
-            <div class="cab"><a href="#">ОСОБИСТИЙ КАБIНЕТ</a></div> 
+            <div class="cab"><a href="#">ОСОБИСТИЙ КАБIНЕТ</a></div>
         </div>
-        <div class="globe"><img src="./img/Globe.png" alt="Globus"></div>
+        <div  class="globe"><img src="./img/Globe.png" alt="Globus"></div>
         <div class="lang" id="block"><a href="#EN">UA</a></div>
     </div>
 
-    <div class="reserv">        
-        Забронювати будиночок    
+    <div class="reserv">
+        Забронювати будиночок
     </div>
     <div class="location">
-        <div id="block">Оберiть мiсцерозташування</div>
+        <div id="block">Оберiть мiсцерозташування</div>        
         <div class="triangle"><a href="#"><svg width="30" height="25" viewBox="0 0 30 25" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M15 25L29.7224 0.25H0.277568L15 25Z" fill="black"/>
             </svg></a>
@@ -129,17 +127,7 @@
             </span>
         </a>
     </div>
-    <hr class="class">
-    <div class="sample">
-        <div class="sampleimg">
-            <img src="./img/1-Bakota.png" alt="Bakota">
-        </div>
-        <div class="sampletitle">Автентична Київщина</div>
-    </div>
-    <div class="samplestar"></div>
-    <div class="samplehr"></div>
-    <div class="sampletext"></div>
-
+    
     <div class="footer">
         © 2021 HolidayTime.  All rights reserved.
     </div>
